[tool.poetry]
name = "devbud docs"
version = "1.0.0"
description = "documentation for devbud"
authors = ["meghalrag"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
